--- a/hocon/_root.conf
+++ b/hocon/_root.conf
@@ -1,8 +1,8 @@
 # _root.conf
 # project specific parameters
-#site_root: "https://optgeo.github.io/kokoromi-western-balkans-tiles"
+site_root: "https://optgeo.github.io/sh2"
 #site_root: "https://hfu.serveousercontent.com"
-site_root: "http://localhost:9966"
+#site_root: "http://localhost:9966"
 # center: [lng, lat]
 center: [
   174.786987
