--- a/hocon/_root.conf
+++ b/hocon/_root.conf
@@ -9,6 +9,6 @@ center: [
   -41.314950
 ]
 zoom: 11
-sprite: ${site_root}"/sprite/sprite"
-glyphs: ${site_root}"/font/{fontstack}/{range}.pbf"
+sprite: ${?site_root}"/sprite/sprite"
+glyphs: ${?site_root}"/font/{fontstack}/{range}.pbf"
 
