--- a/hocon/sources.conf
+++ b/hocon/sources.conf
@@ -2,7 +2,7 @@ sources: {
   v: {
     type: vector
     tiles: [
-      ${site_root}"/zxy/{z}/{x}/{y}.pbf"
+      ${?site_root}"/zxy/{z}/{x}/{y}.pbf"
     ]
     attribution: "OpenStreetMap contributors, <img src='https://unopengis.github.io/watermark/watermark.png'>"
     maxzoom: 15
