--- a/hocon/_root.conf
+++ b/hocon/_root.conf
@@ -3,12 +3,13 @@
 site_root: "https://optgeo.github.io/sh2"
 #site_root: "https://hfu.serveousercontent.com"
 #site_root: "http://localhost:9966"
+site_root: ${?SITE_ROOT}
 # center: [lng, lat]
 center: [
   174.786987
   -41.314950
 ]
 zoom: 11
-sprite: ${?site_root}"/sprite/sprite"
-glyphs: ${?site_root}"/font/{fontstack}/{range}.pbf"
+sprite: ${site_root}"/sprite/sprite"
+glyphs: ${site_root}"/font/{fontstack}/{range}.pbf"
 
